Clock click actions
Options for single, long and double click

if double click never set or set to nothing there is no delay on single click

default action if never set is clock options just like stock.

Change-Id: Id4e86542cab9e84c8b4d6428de64cc318a409378
Signed-off-by: Stevespear426 <stephen.k.spear@gmail.com>

Conflicts:
	core/res/res/values/gummy_strings.xml
	core/res/res/values/symbols.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java

Conflicts:
	core/res/res/values/gummy_symbols.xml

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -137,6 +137,13 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".gummy.GummyReceiver">
+            <intent-filter>
+                <action android:name="com.android.systemui.gummy.LAUNCH_ACTION" />
+            </intent-filter>
+        </receiver>
+
         <!-- started from UsbDeviceSettingsManager -->
         <activity android:name=".usb.UsbConfirmActivity"
             android:exported="true"
