Add permission to WRITE_SYNC_SETTINGS.
This fixes SystemUI crashing when selecting the sync quick toggle.

Change-Id: I59ab9d25c9edfe74fe60e18c73378855a01c2f59

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -78,6 +78,7 @@
 
     <!-- Quick Settings --> 
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <permission android:name="android.permission.SCREENSHOT"
